voting some end

--- a/projects/voting/templates/comment-form.html
+++ b/projects/voting/templates/comment-form.html
@@ -3,13 +3,13 @@
 	<div class="form-group">
 		<label for="inputEmail3" class="col-sm-2 control-label">Представтесь (необязательно)</label>
 		<div class="col-sm-10">
-			<input name="username" type="email" class="form-control" id="inputEmail3" placeholder="Имя">
+			<input name="username" type="text" class="form-control" id="inputEmail3" placeholder="Имя">
 		</div>
 	</div>
 	<div class="form-group">
 		<label for="inputPassword3" class="col-sm-2 control-label">Коммнетарий</label>
 		<div class="col-sm-10">
-			<textarea name="text" class="form-control" id="inputPassword3" placeholder="Сообщение"></textarea>
+			<textarea name="text" class="form-control" id="inputPassword3" placeholder="Сообщение" required></textarea>
 		</div>
 	</div>
 	<div class="form-group">
