--- a/theme/bootstrap/css/variables.less
+++ b/theme/bootstrap/css/variables.less
@@ -49,7 +49,7 @@
 @font-family-monospace:   Menlo, Monaco, Consolas, "Courier New", monospace;
 @font-family-base:        @font-family-sans-serif;
 
-@font-size-base:          16px;
+@font-size-base:          13px;
 @font-size-large:         ceil((@font-size-base * 1.25)); // ~18px
 @font-size-small:         ceil((@font-size-base * 0.85)); // ~12px
 
@@ -71,7 +71,7 @@
 // @headings-font-weight:    500;
 @headings-font-weight:    normal;
 @headings-line-height:    1.1;
-@headings-color:          inherit;
+@headings-color:          @brand-primary;
 
 
 //== Iconography
