--- a/theme/toc/css/css.css
+++ b/theme/toc/css/css.css
@@ -2,6 +2,8 @@
     background-color: #f9f2f2;
     border-radius: 4px;
     padding: 4px;
+    overflow-y: auto;
+    max-height: 500px;
 }
 
 #toc a {
