--- a/theme/style.css
+++ b/theme/style.css
@@ -111,6 +111,11 @@ td {
 td a{
 	display: block;
 }
+td a:focus{
+	color: red;
+    outline: 5px auto -webkit-focus-ring-color;
+    outline-offset: -2px;
+}
 tr.parent a[href^="/"] {
 	color:#9099A3;
 }
