--- a/theme/css/custom.css
+++ b/theme/css/custom.css
@@ -4,3 +4,66 @@ pre {
 h2 {
 	color: black;
 }
+h1 {
+	margin-top: 2.0em
+}
+h2 {
+	margin-top: 2.0em
+}
+h3 {
+	margin-top: 2.0em
+}
+h4 {
+	margin-top: 2.0em
+}
+h5 {
+	margin-top: 2.0em
+}
+h6 {
+	margin-top: 2.0em
+}
+h1 + h2 {
+	margin-top: 0.5652em
+}
+h1 + h3 {
+	margin-top: 0.6842em
+}
+h1 + h4 {
+	margin-top: 0.8125em
+}
+h1 + h5 {
+	margin-top: 0.9286em
+}
+h1 + h6 {
+	margin-top: 1.0000em
+}
+h2 + h3 {
+	margin-top: 0.6842em
+}
+h2 + h4 {
+	margin-top: 0.8125em
+}
+h2 + h5 {
+	margin-top: 0.9286em
+}
+h2 + h6 {
+	margin-top: 1.0000em
+}
+h3 + h4 {
+	margin-top: 0.8125em
+}
+h3 + h5 {
+	margin-top: 0.9286em
+}
+h3 + h6 {
+	margin-top: 1.0000em
+}
+h4 + h5 {
+	margin-top: 0.9286em
+}
+h4 + h6 {
+	margin-top: 1.0000em
+}
+h5 + h6 {
+	margin-top: 1.0000em
+}
