--- a/rbac/rbac_mysql/css.css
+++ b/rbac/rbac_mysql/css.css
@@ -1,4 +1,4 @@
-#control {
+/*#control {
 	padding-right: 8px;
 }
 #state {
@@ -24,3 +24,4 @@ td, th {
 	height: 400px;
 	border: 1px solid lightgray;
 }
+*/
