--- a/css/_tasks/market_color_picker/color_picker.css
+++ b/css/_tasks/market_color_picker/color_picker.css
@@ -13,7 +13,7 @@
 	background-color: white;
 	background-position: center center;
 	background-repeat: no-repeat;
-	-webkit-box-shadow: inset 3px -3px 3px 0px rgba(0,0,0,0.2);
-	-moz-box-shadow: inset 3px -3px 3px 0px rgba(0,0,0,0.2);
-	box-shadow: inset 3px -3px 3px 0px rgba(0,0,0,0.2);
+	-webkit-box-shadow: inset 3px -3px 3px 0px rgba(0, 0, 0, 0.2);
+	-moz-box-shadow: inset 3px -3px 3px 0px rgba(0, 0, 0, 0.2);
+	box-shadow: inset 3px -3px 3px 0px rgba(0, 0, 0, 0.2);
 }
