--- a/php/_tasks/resize_images/views/index/form.html
+++ b/php/_tasks/resize_images/views/index/form.html
@@ -79,21 +79,9 @@
       </div>
     </div>
   </fieldset>
-  <fieldset>
-    <legend>Extra options</legend>
-    <div class="form-group">
-      <div class="col-sm-offset-2 col-sm-10">
-        <div class="checkbox">
-          <label>
-            <input name="subfolder" type="checkbox" value="true" checked="checked"> Save result as a subfolder
-          </label>
-        </div>
-      </div>
-    </div>
-  </fieldset>
   <div class="form-group">
     <div class="col-sm-offset-2 col-sm-10">
-      <button type="submit" class="btn btn-primary">Du it!</button>
+      <button type="submit" class="btn btn-primary">Do it!</button>
     </div>
   </div>
 </form>
