--- a/sass/_task/market_lorem/sass/style.scss
+++ b/sass/_task/market_lorem/sass/style.scss
@@ -1,3 +1,11 @@
+@import "./variables";
+
+@import "./mixin/font";
+@import "./mixin/border";
+
+@import "./button";
+
 @import "./grid";
 @import "./wrap";
 @import "./bg";
+@import "./form_z";
