--- a/sass/_task/market_lorem/sass/form_z.scss
+++ b/sass/_task/market_lorem/sass/form_z.scss
@@ -27,6 +27,36 @@
     }
   }
 
+  label {
+    display: inline-block;
+    @include form_z_font();
+  }
+
+  .row {
+    .col-1, .col-2, .col-3, .col-4, .col-5, .col-6, .col-7, .col-8, .col-9, .col-10, .col-11, .col-12 {
+      &:first-child {
+        .wrap.padded {
+          text-align: right;
+        }
+        p {
+          text-align: right;
+        }
+      }
+      .wrap.padded {
+        label {
+          margin-top: 10px;
+        }
+      }
+    }
+    p {
+      line-height: 44px;
+      label {
+        display: inline-block;
+        @include form_z_font();
+      }
+    }
+  }
+
   .button {
     @extend %button;
   }
