webpack continue extended configuration.

--- a/webpack/_tasks/hello_world2/javascript/modules/menu/menu.css
+++ b/webpack/_tasks/hello_world2/javascript/modules/menu/menu.css
@@ -3,7 +3,7 @@
 }
 
 .menu {
-  background-image: url("../../../../../../images/16-16-nature.jpg");
+  background-image: url("100-100-ripe-apple.jpg");
   background-repeat: no-repeat;
   background-position: center center;
   background-size: contain;
