--- a/sass/_task/market_lorem/sass/wrap.scss
+++ b/sass/_task/market_lorem/sass/wrap.scss
@@ -10,10 +10,21 @@
       padding: 10px;
     }
   }
+  &.marged {
+    margin: 20px;
+
+    &.shred {
+      margin: 10px;
+    }
+
+    &.cell {
+      margin: 10px;
+    }
+  }
 }
 
 .grid {
-  .row {
+  &.row, .row {
     .col-1, .col-2, .col-3, .col-4, .col-5, .col-6, .col-7, .col-8, .col-9, .col-10, .col-11, .col-12 {
       &:first-child {
         & .wrap.shred.padded {
@@ -22,6 +33,12 @@
         & .wrap.cell.padded {
           padding-left: 20px;
         }
+        & .wrap.shred.marged {
+          margin-left: 0px;
+        }
+        & .wrap.cell.marged {
+          margin-left: 20px;
+        }
       }
       &:last-child {
         & .wrap.shred.padded {
@@ -29,6 +46,12 @@
         }
         & .wrap.cell.padded {
           padding-right: 20px;
+        }
+        & .wrap.shred.marged {
+          margin-right: 0px;
+        }
+        & .wrap.cell.marged {
+          margin-right: 20px;
         }
       }
     }
