--- a/sass/_task/market_lorem/sass/style.scss
+++ b/sass/_task/market_lorem/sass/style.scss
@@ -3,8 +3,10 @@
 @import "./mixin/font";
 @import "./mixin/border";
 
+@import "./container";
 @import "./grid";
 @import "./wrap";
 @import "./bg";
 @import "./button";
-@import "./form_z";
+@import "./form";
+@import "./text";
