--- a/sass/_task/market_lorem/sass/style.scss
+++ b/sass/_task/market_lorem/sass/style.scss
@@ -1,8 +1,11 @@
 @import "./variables";
 
 @import "./mixin/font";
+@import "./mixin/noselect";
 @import "./mixin/border";
 
+@import "../../../../node_modules/normalize.css";
+@import "./reset";
 @import "./container";
 @import "./grid";
 @import "./wrap";
@@ -10,3 +13,4 @@
 @import "./button";
 @import "./form";
 @import "./text";
+@import "./flash";
