--- a/rails/view/form.html.erb
+++ b/rails/view/form.html.erb
@@ -7,6 +7,7 @@
 <%= form_for article, url: {action: "update"} do |f| %>
   <%= f.select :slide_event_hidden, [["Скрыт","true"],["Виден","false"]] %>
   <%= f.hidden_field :id %>
+  <%= f.text_field :title %>
   <%= f.submit "Отправить" %>
 <% end %>
 
