--- a/sass/_task/market_lorem/sass/form.scss
+++ b/sass/_task/market_lorem/sass/form.scss
@@ -1,8 +1,13 @@
+@import "./form/checkbox";
+@import "./form/radio";
+
 @mixin form_z_padding() {
   padding: 11px 21px;
 }
 
 .form_z {
+  @include form_z_font();
+
   fieldset {
     padding: 10px;
     margin-top: 10px;
@@ -29,7 +34,6 @@
 
   label {
     display: inline-block;
-    @include form_z_font();
   }
 
   .row {
@@ -49,10 +53,8 @@
       }
     }
     p {
-      line-height: 44px;
       label {
         display: inline-block;
-        @include form_z_font();
       }
     }
   }
