--- a/webpack/_tasks/lab/javascript/sass.scss
+++ b/webpack/_tasks/lab/javascript/sass.scss
@@ -3,10 +3,12 @@ html, body {
   padding: 0;
 }
 
+// Очистить после
+
 #background-image {
   width: 100px;
   height: 100px;
-  background-image: url("./images/100-100-classic-car.jpg");
+  background-image: url("../../../../images/jpg/100-100-classic-car.jpg");
 }
 
-@import "./sass/clear-blocks.scss";
+// @import "./sass/clear-blocks.scss";
