--- a/rails/view/form.html.erb
+++ b/rails/view/form.html.erb
@@ -1,3 +1,7 @@
+_controller_:
+```
+render variants: [:mobile, :desktop]
+```
 
 <% for relay in @relays %>
   <% lookup_context.variants = [:list] %>
