--- a/rails/view/form.html.erb
+++ b/rails/view/form.html.erb
@@ -10,6 +10,8 @@ render variants: [:mobile, :desktop]
 
 <%= form_for article, url: {action: "update"} do |f| %>
   <%= f.select :slide_event_hidden, [["Скрыт","true"],["Виден","false"]] %>
+  <!-- Чтобы задать выбранные - задать в модели выбранные на стадии контролера - так будет правильнее -->
+  <%= f.select :pickup_affiliate_id, @affiliate_select_options, include_blank: true, disabled: [33, 60] %>
   <%= f.hidden_field :id %>
 
   <div class="grid row field_row <%= @new_client.class.field_show_with_form(:fio) %>">
