--- a/rails/view/form.html.erb
+++ b/rails/view/form.html.erb
@@ -74,7 +74,17 @@
   </p>
 <% end %>
 
+<!--
+  Самописная форма
+-->
+
 <%= form_tag(subscription_subscriber_path, method: "get", class: "ui mini form", id: "form_subscription") do %>
+
+<%= form_tag exchange1c_manage_path, :method => :post, :class => 'ui mini form', id: 'manage_form' do %>
+  <%= hidden_field_tag :on, '0' %>
+  <%= check_box_tag :on, '1', @on %>
+  <%= button_tag 'Применить', :name => :submit, :type => :submit %>
+<% end %>
 
 <form action="<%= subscription_subscriber_read_url(subscriber.id) %>" method="post" class="ui mini form">
   <%
