--- a/css/_tasks/menu/javascript/sass.scss
+++ b/css/_tasks/menu/javascript/sass.scss
@@ -26,8 +26,6 @@ $color: inherit;
 
   li {
     position: relative;
-    transition-duration: 0.5s;
-    width: auto;
     &:first-child {
       border-top-left-radius: $border_radius;
       border-top-right-radius: $border_radius;
@@ -42,12 +40,14 @@ $color: inherit;
 
       &>ul {
         visibility: visible;
-        display: block;
+        opacity: 1;
+        transform: scale(1);
       }
     }
     &:focus-within > ul {
       visibility: visible;
-      display: block;
+      opacity: 1;
+      transform: scale(1);
     }
 
     &.current {
@@ -60,24 +60,28 @@ $color: inherit;
   }
 
   ul {
-    width: $imenu_width;
+    width: 100%;
     margin: 0;
     margin-left: 1px;
     padding: 0;
     list-style: none;
-    display: none;
     position: absolute;
     visibility: hidden;
+    opacity: 0;
     top: 0;
     left: 100%;
     border: solid 1px $border_color;
     border-radius: $border_radius;
     background-color: $background_color;
     box-shadow: 0px 2px 2px -1px rgba(0, 0, 0, 0.2);
+    transform: scale(0);
+    transform-origin: left top 0;
+    transition: opacity .2s linear .1s, transform .2s linear .0s;
 
     &:hover {
+      transform: scale(1);
       visibility: visible;
-      display: block;
+      opacity: 1;
     }
 
     &+i {
