--- a/js/_tasks/offer_filters/offer_filters.css
+++ b/js/_tasks/offer_filters/offer_filters.css
@@ -2,3 +2,12 @@ label, input[type="radio"] {
   cursor: pointer;
   user-select: none;
 }
+label.disabled {
+  color: gray;
+}
+label.disabled input {
+  opacity: 0.33;
+}
+option.disabled {
+  color: gray;
+}
