--- a/rails/view/form.html.erb
+++ b/rails/view/form.html.erb
@@ -1,9 +1,12 @@
 <%= form_for article, url: {action: "update"} do |f| %>
 
 
+
+
   <!--
     Текст (input)
   -->
+
   <div class="grid row field_row <%= @new_client.class.field_show_with_form(:fio) %>">
     <div class="col-3">
       <div class="wrap shred padded"><%= cl.label :fio, class: with_required(@new_client, :fio) %></div>
@@ -17,9 +20,12 @@
   </div>
 
 
+
+
   <!--
     Селект
   -->
+
   <%= f.select :slide_event_hidden, [["Скрыт","true"],["Виден","false"]] %>
   <!-- Чтобы задать выбранные - задать в модели выбранные на стадии контролера - так будет правильнее -->
   <%= f.select :pickup_affiliate_id, @affiliate_select_options, include_blank: true, disabled: [33, 60] %>
@@ -40,13 +46,48 @@
   %>
 
 
+
+
   <!--
     Флажек
   -->
+
   <%= f.label :pickup, class: "check_b" do %>
     <%= f.check_box(:pickup) %>
     <span></span>
   <% end %>
+
+
+
+
+  <!--
+    Список флажков
+  -->
+  <%= form.collection_check_boxes(:role_ids, ::Role.all, :id, :ui_name) %>
+  <!-- или -->
+  <ul class="zn ul unbullet" style="columns: 4;">
+    <%=
+      form.collection_check_boxes(
+        :affiliate_ids,
+        ::Market::Model::Affiliate.published.order(name: :asc),
+        :id,
+        :ui_name
+      ) do |b|
+    %>
+      <li class="nobr">
+        <label class="check_b">
+          <%= b.check_box %>
+          <span></span>
+        </label>
+        <%= b.label %>
+      </li>
+    <% end %>
+  </ul>
+  <!-- или для самописной формы -->
+  <%= collection_check_boxes(:users, :role_ids, ::Role.all, :id, :ui_name) %>
+
+
+
 
   <!--
     Радиокнопка
@@ -86,8 +127,20 @@
   <p class="nobr inline field">
     <%= f.number_field :slide_event_order, html: {class: 'ui input'} %>
     <%= f.button '<i class="save icon"></i>'.html_safe, class: 'ui mini icon button' %>
+
+    <%=
+      f.button t('form.delete'),
+        type: :submit,
+        name: :submit,
+        value: :delete_client,
+        data: {confirm: 'Вы действительно хотите удалить Клиента?'},
+        class: 'button'
+    %>
   </p>
 <% end %>
+
+
+
 
 <!--
   Самописная форма
