--- a/rails/view/form.html.erb
+++ b/rails/view/form.html.erb
@@ -136,7 +136,7 @@
 
 
   <!--
-    Радиокнопка
+    Преключатель (радиокнопка)
   -->
   <% f.object.class.payment_types.each do |value_s, value_i| %>
     <label>
