--- a/js/_tasks/game/src/index.scss
+++ b/js/_tasks/game/src/index.scss
@@ -2,14 +2,15 @@
   display: inline-block;
 }
 
-#timer {
+#timer_button {
   display: inline-block;
-  width: 10px;
-  height: 10px;
-  background-color: red;
+  vertical-align: top;
+  // width: 10px;
+  // height: 10px;
+  // background-color: red;
 }
 
 body {
-  background-image: url("img/100-100-colorful-autumn.jpg");
+  // background-image: url("img/100-100-colorful-autumn.jpg");
   background-repeat: repeat;
 }
