--- a/css/_tasks/tree_ul_list/csstree.css
+++ b/css/_tasks/tree_ul_list/csstree.css
@@ -1,33 +1,37 @@
-.tree2 {
+.csstree {
   font-size: 1em;
   margin: 0;
   padding: 0 0 0 6px;
   list-style-type: none;
   line-height: 1.5em;
 }
-.tree2 ul {
+.csstree ul {
   margin: 0;
   padding: 0 0 0 6px;
   list-style-type: none;
 }
-.tree2 li {
+.csstree li {
   margin: 0;
   padding: 0 0 0 30px;
   border-left: solid 1px gray;
 
   position: relative;
 }
-.tree2 details {
+.csstree li > * {
+  margin-top: 0;
+  margin-bottom: 0;
+}
+.csstree details {
   position: relative;
   top: 0;
-  /* -li.padding + (:before.width/2) - ((summary.width-1)/2) */
-  /* -30 + (26/2) - ((13-1)/2) = -23 */
+  /* -li.padding + ((li:before.width - 1) / 2) - ((summary.width - 1) / 2) */
+  /* -30 + ((27 - 1) / 2) - ((13 - 1) / 2) = -23 */
   left: -23px;
 }
-.tree2 details::before {
+.csstree details::before {
   content: none;
 }
-.tree2 details[open]::before {
+.csstree details[open]::before {
   content: '';
   display: block;
   position: absolute;
@@ -37,7 +41,7 @@
   top: -0.75em;
   left: 6px;
 }
-.tree2 summary {
+.csstree summary {
   position: absolute;
   width: 13px;
   height: 13px;
@@ -55,7 +59,7 @@
   background-size: 7px 1px, 1px 7px;
   background-repeat: no-repeat;
 }
-.tree2 details[open] > summary {
+.csstree details[open] > summary {
   background:
     linear-gradient(#000, #000),
     #FFF;
@@ -63,22 +67,19 @@
   background-size: 7px 1px, 1px 7px;
   background-repeat: no-repeat;
 }
-.tree2 li::before {
+.csstree li::before {
   content: '';
   display: block;
   border-bottom: solid 1px gray;
   position: absolute;
-  width: 26px;
+  width: 27px;
   height: 0.75em;
-  left: 0;
+  left: -1px;
   top: 0;
 }
-.tree2 li:last-child {
-  border-left: 0px solid transparent;
+.csstree li:last-child {
+  border-left: 1px solid transparent;
 }
-.tree2 li:last-child > details {
-  left: -22px;
-}
-.tree2 li:last-child::before {
+.csstree li:last-child::before {
   border-left: solid 1px gray;
 }
